# rofi-plugin-template

./: .gitignore  Makefile.am  configure.ac  configure_all.sh
src/: cache.c  cache.h  map.c  map.h  myplugin.c  plugins.c  utils.c  utils.h  world.c  world.h
src/plugins/: apps.c  apps.h  files.c  plugin.h  plugin_registry.h  web_search.c  web_search.h
